periods at the end of sentences

--- a/resume.tex
+++ b/resume.tex
@@ -77,12 +77,12 @@
 	{Systems Engineer I}
 	{Charter Communications}
 	{
-		Won both the Q3 Quarterly Excellence Award (Aug '24) and the Above and Beyond Award (Oct '24)
+		Won both the Q3 Quarterly Excellence Award (Aug '24) and the Above and Beyond Award (Oct '24).
 		\item Worked with non-technical users across several teams to develop a chat bot used hundreds of times per day providing concise, real-time information on access point information.
 		\item Rapidly developed and deployed a breakfix automation to stifle a botnet resulting in quick, easy identification of infected access points, alongside incorporating extensive graphing and alerting on the project using Prometheus and Grafana.
 		\item Created a cookiecutter project structure to ensure consistency across the team's developments.
-		\item Introduced modern Python practices (e.g., linting, type hinting, virtual environments) improving code clarity, security, and team efficiency
-		\item Developed and deployed several large, containerized ETL automations in Python. One of these ETLs reduced critical missing data from 6\% to 0.6\% for the team's data scientist
+		\item Introduced modern Python practices (e.g., linting, type hinting, virtual environments) improving code clarity, security, and team efficiency.
+		\item Developed and deployed several large, containerized ETL automations in Python. One of these ETLs reduced critical missing data from 6\% to 0.6\% for the team's data scientist.
 	}
 
 	\cventry
