--- a/resume.tex
+++ b/resume.tex
@@ -78,7 +78,7 @@
 	{Charter Communications}
 	{
 		Won both the Q3 Quarterly Excellence Award (Aug '24) and the Above and Beyond Award (Oct '24).
-		\item Worked with non-technical users across several teams to develop a chat bot used hundreds of times per day providing concise, real-time information on access point information.
+		\item Worked with non-technical users across several teams to develop a chat bot used hundreds of times per day providing concise, real-time information on access point status.
 		\item Rapidly developed and deployed a breakfix automation to stifle a botnet resulting in quick, easy identification of infected access points, alongside incorporating extensive graphing and alerting on the project using Prometheus and Grafana.
 		\item Created a cookiecutter project structure to ensure consistency across the team's developments.
 		\item Introduced modern Python practices (e.g., linting, type hinting, virtual environments) improving code clarity, security, and team efficiency.
