--- a/resume.tex
+++ b/resume.tex
@@ -65,10 +65,10 @@
 	{Charter Communications}
 	{
 		Identified, developed, and deployed an automation reducing small cell install time by 30+ minutes, projected to save the company \$100k by the end of the year.
-		\item Performed a complete re-architecture and refactor on an existing 5G automation to fix consistent reliability, timeliness, and accuracy issues on 3000+ performance indicators for millions of GNBs.
-		\item Developed an Ansible playbook to deploy a database server with Postgres + Timescale and integrated LDAP user logins to significantly reduce database user management over time.
-		\item Ensured 99\% uptime, monitoring, alerting, consistency, accuracy, and up-to-date documentation on 30+ ETLs all developed and owned by me.
-		\item Sole product owner and developer on all 5G automation workflows, supporting multiple full-time data scientists across various teams in the organization. 
+		\item Performed a complete database re-architecture and code refactor on an existing 5G automation to fix consistent reliability, timeliness, and accuracy issues on 3000+ performance indicators for millions of small cell GNBs.
+		\item Resolved issues in an Ansible playbook meant to deploy a VM with Postgres + Timescale, and configured automated backup procedures using pgbackrest.
+		\item Ensured 99\% uptime, monitoring, alerting, consistency, accuracy, and up-to-date documentation on 30+ containerized ETLs all developed and owned by me, and all deployed via Kubernetes.
+		\item Used packer to create a RockyOS image based on the internal compliance team's golden image, and ensured all Ansible playbooks and tasks were functional while migrating VM operating systems.
 		\item Introduced and administered code reviews into the team's weekly workflow to ensure code quality, idea sharing, and continued learning for all technical team members.
 	}
 	
@@ -79,7 +79,7 @@
 	{
 		Won both the Q3 Quarterly Excellence Award (Aug '24) and the Above and Beyond Award (Oct '24).
 		\item Worked with non-technical users across several teams to develop a chat bot used hundreds of times per day providing concise, real-time information on access point status.
-		\item Rapidly developed and deployed a breakfix automation to stifle a botnet resulting in quick, easy identification of infected access points, alongside incorporating extensive graphing and alerting on the project using Prometheus and Grafana.
+		\item Rapidly developed and deployed a breakfix automation to stifle a botnet resulting in quick, easy identification of infected access points, alongside incorporating graphing and alerting on the project using Prometheus and Grafana.
 		\item Created a cookiecutter project structure to ensure consistency across the team's developments.
 		\item Introduced modern Python practices (e.g., linting, type hinting, virtual environments) improving code clarity, security, and team efficiency.
 		\item Developed and deployed several large, containerized ETL automations in Python. One of these ETLs reduced critical missing data from 6\% to 0.6\% for the team's data scientist.
@@ -119,8 +119,8 @@
 	\cventry
 	{}{}{}
 	{	
-		Very proficient in Python and HTML + CSS
-		\item Proficient in C, C++, and SQL
+		Very proficient in Python and SQL
+		\item Proficient in C, C++, and HTML + CSS
 		\item Experience with Rust, TypeScript, Java, Kotlin, OCaml and RISC-V
 	}
 
@@ -128,7 +128,7 @@
 	\cventry
 	{}{}{}
 	{	
-		Ansible, Docker, Podman, Linux, Kubernetes, Redis, Grafana, Prometheus, Postgres, CI/CD, Git, SQLAlchemy, Google Apps Script, Wordpress
+		Ansible, Docker, Podman, Linux, Kubernetes, Redis, Grafana, Prometheus, Postgres, CI/CD, Git, Packer, SQLAlchemy, Google Apps Script, Wordpress
 	}
 	
 	\cvsection{Interests and Mostly Useless Skills}
